syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: syncthing-config
      - name: photoprism
        persistentVolumeClaim:
          claimName: photoprism-config-pvc
      containers:
      - image: syncthing/syncthing
        name: syncthing
        volumeMounts:
        - name: config
          mountPath: /var/syncthing
        - name: photoprism
          mountPath: /var/photoprism
        ports:
        - name: http
          protocol: TCP
          containerPort: 8384
