syncthing/proxy.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: syncthing-tcp-proxy
  name: syncthing-tcp-proxy
spec:
  selector:
    matchLabels:
      app: syncthing-tcp-proxy
  template:
    metadata:
      labels:
        app: syncthing-tcp-proxy
    spec:
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - toad
                      - toadette
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
      - image: alpine/socat
        name: ssh-proxy
        args:
        - TCP6-listen:22000,reuseaddr,fork
        - TCP:syncthing-data:22000
