syncthing/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-gui
spec:
  selector:
    app: syncthing
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
    name: http
